[package]
name = "protein-comparison-tool"
version = "0.1.0"
authors = ["duck-bongos <billmannd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-web = "0.6.3"
navbar = { version = "0.0.2", features = ["dio"] }
ordered-float = "5.0.0"
serde = "1.0.225"
theme = { version = "0.0.3", features = ["dio"] }
tracing = "0.1.41"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[web.app]
base_path = "protein-comparison-tool"
